# PersonMongodb

./: .gitignore  CMakeLists.txt
PersonMongoDB/: CMakeLists.txt
PersonMongoDB/include/persondb/: database.h  db_structure.h
PersonMongoDB/src/: database.cc  db_structure.cc
test/: CMakeLists.txt  Insert2DB.cc  Query2DB.cc  faiss_test.cc
